--- a/voter_mapper/map/templates/map/header.html
+++ b/voter_mapper/map/templates/map/header.html
@@ -1,3 +1,5 @@
+{% load leaflet_tags %}
+
 <meta charset="utf-8" />
 <meta name="viewport" content="minimum-scale=1.0, width=device-width" />
 
@@ -12,6 +14,9 @@
 
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/foundation.css" />
+
+{% leaflet_css %}
+
 <link rel="stylesheet" type="text/css" media="screen, projection" href="{{ STATIC_URL }}css/style.css?v=1" />
 
 <!-- Standard HTML Tags -->
